--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3",
-    "vue3-carousel": "^0.2.5"
-
+    "vue3-carousel": "^0.2.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
